@@ -1,12 +1,18 @@
 package com.gepardec.mega.zep;
 
+import com.gepardec.mega.db.entity.common.PaymentMethodType;
+import com.gepardec.mega.domain.model.Bill;
 import com.gepardec.mega.domain.model.BillabilityPreset;
 import com.gepardec.mega.domain.model.Employee;
 import com.gepardec.mega.domain.model.Project;
 import com.gepardec.mega.domain.model.monthlyreport.ProjectEntry;
 import com.gepardec.mega.domain.utils.DateUtils;
+import com.gepardec.mega.service.api.MonthlyReportService;
 import com.gepardec.mega.service.mapper.EmployeeMapper;
 import com.gepardec.mega.zep.mapper.ProjectEntryMapper;
+import de.provantis.zep.BelegListeType;
+import de.provantis.zep.BelegType;
+import de.provantis.zep.BelegbetragType;
 import de.provantis.zep.FehlzeitType;
 import de.provantis.zep.KategorieListeType;
 import de.provantis.zep.KategorieType;
@@ -17,6 +23,12 @@ import de.provantis.zep.ProjektMitarbeiterType;
 import de.provantis.zep.ProjektNrListeType;
 import de.provantis.zep.ProjektType;
 import de.provantis.zep.ProjektzeitType;
+import de.provantis.zep.ReadBelegAnhangRequestType;
+import de.provantis.zep.ReadBelegAnhangResponseType;
+import de.provantis.zep.ReadBelegAnhangSearchCriteriaType;
+import de.provantis.zep.ReadBelegRequestType;
+import de.provantis.zep.ReadBelegResponseType;
+import de.provantis.zep.ReadBelegSearchCriteriaType;
 import de.provantis.zep.ReadFehlzeitRequestType;
 import de.provantis.zep.ReadFehlzeitResponseType;
 import de.provantis.zep.ReadFehlzeitSearchCriteriaType;
@@ -37,6 +49,7 @@ import io.quarkus.cache.CacheInvalidate;
 import io.quarkus.cache.CacheResult;
 import jakarta.enterprise.context.RequestScoped;
 import jakarta.inject.Inject;
+import org.apache.commons.codec.binary.Base64;
 import org.apache.commons.lang3.Range;
 import org.apache.commons.lang3.StringUtils;
 import org.slf4j.Logger;
@@ -50,7 +63,6 @@ import java.util.List;
 import java.util.Optional;
 import java.util.function.BiFunction;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 
 import static com.gepardec.mega.domain.utils.DateUtils.getFirstDayOfCurrentMonth;
 import static com.gepardec.mega.domain.utils.DateUtils.getLastDayOfCurrentMonth;
@@ -71,17 +83,23 @@ public class ZepServiceImpl implements ZepService {
 
     private final ProjectEntryMapper projectEntryMapper;
 
+    private final MonthlyReportService monthlyReportService;
+
+
+
     @Inject
     public ZepServiceImpl(final EmployeeMapper employeeMapper,
                           final Logger logger,
                           final ZepSoapPortType zepSoapPortType,
                           final ZepSoapProvider zepSoapProvider,
-                          final ProjectEntryMapper projectEntryMapper) {
+                          final ProjectEntryMapper projectEntryMapper,
+                          final MonthlyReportService monthlyReportService) {
         this.employeeMapper = employeeMapper;
         this.logger = logger;
         this.zepSoapPortType = zepSoapPortType;
         this.zepSoapProvider = zepSoapProvider;
         this.projectEntryMapper = projectEntryMapper;
+        this.monthlyReportService = monthlyReportService;
     }
 
     @Override
@@ -173,7 +191,7 @@ public class ZepServiceImpl implements ZepService {
                 .flatMap(projectTimes -> Optional.ofNullable(projectTimes.getProjektzeitListe()))
                 .stream()
                 .flatMap(projectTimes -> projectEntryMapper.mapList(projectTimes.getProjektzeiten()).stream())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @CacheResult(cacheName = "projektzeittype")
@@ -198,7 +216,18 @@ public class ZepServiceImpl implements ZepService {
         ProjektListeType projektListe = readProjekteResponseType.getProjektListe();
         return projektListe.getProjekt().stream()
                 .map(pt -> createProject(pt, monthYear))
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+
+    @Override
+    public List<Bill> getBillsForEmployeeByMonth(final Employee employee) {
+        final ReadBelegResponseType readBelegResponseType = getBillsInternal(employee);
+
+        BelegListeType billList = readBelegResponseType.getBelegListe();
+        return billList.getBeleg().stream()
+                .map(this::createBill)
+                .toList();
     }
 
     @Override
@@ -255,6 +284,43 @@ public class ZepServiceImpl implements ZepService {
         return zepSoapPortType.readProjekte(readProjekteRequestType);
     }
 
+    private ReadBelegResponseType getBillsInternal(final Employee employee) {
+        LocalDate dateForSearchCriteria;
+        LocalDate midOfCurrentMonth = LocalDate.now().withDayOfMonth(14);
+        LocalDate now = LocalDate.now();
+        LocalDate firstOfPreviousMonth = now.withMonth(now.getMonth().minus(1).getValue()).withDayOfMonth(1);
+
+        if (now.isAfter(midOfCurrentMonth) && monthlyReportService.isMonthConfirmedFromEmployee(employee, firstOfPreviousMonth)) {
+            dateForSearchCriteria = now;
+        } else {
+            dateForSearchCriteria = firstOfPreviousMonth;
+        }
+
+        final ReadBelegSearchCriteriaType readBelegSearchCriteriaType = createBillSearchCriteria(employee, dateForSearchCriteria);
+
+        final ReadBelegRequestType readBelegRequestType = new ReadBelegRequestType();
+        readBelegRequestType.setRequestHeader(zepSoapProvider.createRequestHeaderType());
+        readBelegRequestType.setReadBelegSearchCriteria(readBelegSearchCriteriaType);
+
+        return zepSoapPortType.readBeleg(readBelegRequestType);
+    }
+
+    private ReadBelegAnhangResponseType getAttachmentForBill(int billNumber) {
+        final ReadBelegAnhangSearchCriteriaType readBelegAnhangSearchCriteriaType = createAttachmentSearchCriteria(billNumber);
+
+        final ReadBelegAnhangRequestType readBelegAnhangRequestType = new ReadBelegAnhangRequestType();
+        readBelegAnhangRequestType.setRequestHeader(zepSoapProvider.createRequestHeaderType());
+        readBelegAnhangRequestType.setReadBelegAnhangSearchCriteria(readBelegAnhangSearchCriteriaType);
+
+        return zepSoapPortType.readBelegAnhang(readBelegAnhangRequestType);
+    }
+
+    private ReadBelegAnhangSearchCriteriaType createAttachmentSearchCriteria(int billNumber) {
+        ReadBelegAnhangSearchCriteriaType searchCriteria = new ReadBelegAnhangSearchCriteriaType();
+        searchCriteria.setBelegNr(billNumber);
+        return searchCriteria;
+    }
+
     private ReadProjektzeitenSearchCriteriaType createProjectTimeSearchCriteria(Employee employee, LocalDate date) {
         ReadProjektzeitenSearchCriteriaType searchCriteria = new ReadProjektzeitenSearchCriteriaType();
 
@@ -290,6 +356,50 @@ public class ZepServiceImpl implements ZepService {
         return searchCriteria;
     }
 
+    private ReadBelegSearchCriteriaType createBillSearchCriteria(Employee employee, LocalDate date){
+        ReadBelegSearchCriteriaType searchCriteria = new ReadBelegSearchCriteriaType();
+
+        //setUserIdListe needs this special parameter below, could be more than one id but in this case only one is useful
+        UserIdListeType userIdListe = new UserIdListeType();
+        userIdListe.setUserId(List.of(employee.getUserId()));
+
+        searchCriteria.setUserIdListe(userIdListe);
+        searchCriteria.setVon(getFirstDayOfCurrentMonth(date));
+        searchCriteria.setBis(getLastDayOfCurrentMonth(date));
+
+        return searchCriteria;
+    }
+
+    private Bill createBill(final BelegType belegType) {
+        List<BelegbetragType> amountList = belegType.getBelegbetragListe().getBelegbetrag();
+        ReadBelegAnhangResponseType readBelegAnhangResponseType = getAttachmentForBill(belegType.getBelegNr());
+
+        //because it is not possible to store a byte[] in json
+        String attachmentBase64String = null;
+
+        if(readBelegAnhangResponseType.getAnhang().getInhalt() != null){
+            byte[] attachmentBase64 = readBelegAnhangResponseType.getAnhang().getInhalt();
+            attachmentBase64String = Base64.encodeBase64String(attachmentBase64);
+        }
+        
+
+        // would be different if there is more than one tax rate on one bill
+        // -> is not our case, if it would be one should consider changing structure of Bill-Object and iterate over all entries of amountList
+        double bruttoValue = 0.0;
+        if(amountList.size() == 1){
+            bruttoValue = amountList.get(0).getBetrag() * amountList.get(0).getMenge();
+        }
+
+        return Bill.builder()
+                .billDate(DateUtils.parseDate(belegType.getDatum()))
+                .bruttoValue(bruttoValue)
+                .billType(belegType.getBelegart())
+                .paymentMethodType(PaymentMethodType.getByName(belegType.getZahlungsart()).orElse(null)) //can actually never be null, because it is required in ZEP -> Optional due to Enum
+                .projectName(belegType.getProjektNr())
+                .attachmentBase64(attachmentBase64String)
+                .build();
+    }
+
     private Project createProject(final ProjektType projektType, final LocalDate monthYear) {
         Optional<String> endDateString = Optional.ofNullable(projektType.getEndeDatum());
         LocalDate endDate = endDateString.map(LocalDate::parse)
@@ -320,7 +430,7 @@ public class ZepServiceImpl implements ZepService {
                 .stream()
                 .filter(e -> filterActiveEmployees(monthYear, e.getVon(), e.getBis()))
                 .map(ProjektMitarbeiterType::getUserId)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private boolean filterActiveEmployees(final LocalDate monthYear, final String inProjectFrom, final String inProjectUntil) {
@@ -343,7 +453,7 @@ public class ZepServiceImpl implements ZepService {
                 .filter(e -> filterActiveEmployees(monthYear, e.getVon(), e.getBis()))
                 .filter(projektMitarbeiterType -> PROJECT_LEAD_RANGE.contains(projektMitarbeiterType.getIstProjektleiter()))
                 .map(ProjektMitarbeiterType::getUserId)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private List<String> createCategories(final ProjektType projektType) {
@@ -352,7 +462,7 @@ public class ZepServiceImpl implements ZepService {
                 .getKategorie()
                 .stream()
                 .map(KategorieType::getKurzform)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -373,6 +483,6 @@ public class ZepServiceImpl implements ZepService {
                 .stream()
                 .flatMap(mitarbeiterListe -> mitarbeiterListe.getMitarbeiter().stream())
                 .map(employeeMapper::map)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
